# psycopg_querysets

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  tox.ini
psycopg_querysets/: api.py  tests.py
