[metadata]
name = psycopg_querysets
version = file: VERSION
author = Craig de Stigter
author_email = craig@destigter.nz
description = Querysets for psycopg
long_description = file: README.md, LICENSE.txt
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    psycopg[binary]
    sqlparse
